--- a/2015_06_DevOps/themes/glasnt.css
+++ b/2015_06_DevOps/themes/glasnt.css
@@ -313,3 +313,6 @@ comment { color: green; font-weight: bold; }
 .tweet .date { display: none; font-size: 30px; color: #ddd }
 
 .tweet .content { font-size: 50px; padding-top: 50px; padding-bottom: 50px  }
+
+
+pre g { color: grey; }
