--- a/2015_06_DevOps/themes/extend.css
+++ b/2015_06_DevOps/themes/extend.css
@@ -36,8 +36,7 @@ section.part6 p {
 section {
 /*section.black {*/
 	background: black;
-	color: white;
-}
+	color: white;}
 
 /*
  * Bubble for explanatory details about specific elements and classes used to
