--- a/2015_08_Pycon_Hatrack/themes/glasnt.css
+++ b/2015_08_Pycon_Hatrack/themes/glasnt.css
@@ -11,4 +11,6 @@ footer.pagenumber { display:none}
 .embed img { width: 100%; }
 .main { margin-top: 150px; text-align: center}
 
+code { font: 38px 'PT Mono' }
 
+.point { font: 100px; text-align: center; margin-top: 100px; margin-bottom: 20px; }
