--- a/2015_08_Pycon_Hatrack/themes/glasnt.css
+++ b/2015_08_Pycon_Hatrack/themes/glasnt.css
@@ -14,3 +14,4 @@ footer.pagenumber { display:none}
 code { font: 38px 'PT Mono' }
 
 .point { font: 100px; text-align: center; margin-top: 100px; margin-bottom: 20px; }
+.attr { font:28px 'PT Sans'; }
