it's the final countdown

--- a/2015_08_Pycon_Hatrack/themes/glasnt.css
+++ b/2015_08_Pycon_Hatrack/themes/glasnt.css
@@ -18,3 +18,4 @@ code { font: 38px 'PT Mono' }
 .octohat { margin-left: 30px; }
 .rockstar code { font-size: 40px }
 .slide footer { font: 30px 'PT Mono'; margin-bottom: 50px }
+.point_large { margin-top: 50px; text-align:left ; font: 60px 'PT Sans'}
