--- a/2015_09_KiwiPyCon/css/theme/projection_white.css
+++ b/2015_09_KiwiPyCon/css/theme/projection_white.css
@@ -134,12 +134,14 @@ body {
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); }
 
 .reveal code {
-  font-family: monospace; }
+  font-family: monospace;  font-size: 80%}
 
 .reveal pre code {
   display: block;
   padding: 5px;
   overflow: auto;
+  font-size: 150%;
+  line-height: 1.1;
   max-height: 400px;
   word-wrap: normal;
   background: #3F3F3F;
