--- a/2015_10_JoomlaDay_Workshop/css/glasnt.css
+++ b/2015_10_JoomlaDay_Workshop/css/glasnt.css
@@ -3,4 +3,4 @@ span.n {
 	padding: 5px
 } 
 
-span.X { display:block; font-weight: bold; padding: 5px;color: aqua }
+span.X { display:block; font-weight: bold; padding: 5px;color: orange }
