--- a/2015_10_JoomlaDay_Workshop/css/glasnt.css
+++ b/2015_10_JoomlaDay_Workshop/css/glasnt.css
@@ -9,3 +9,4 @@ span.Z { display:block; font-weight: bold; padding: 5px;color: lightgreen }
 span.C { display:block; font-weight: bold; padding: 5px;color: red }
 
 span.dasfoot { position:absolute; top: 670px; right: 1em; font-size: 75% }
+span.dasfootc { position:absolute; top: 470px; right: 1em; font-size: 75% }
