--- a/2015_10_OSDC_JavaScript/css/glasnt.css
+++ b/2015_10_OSDC_JavaScript/css/glasnt.css
@@ -2,3 +2,4 @@ c { color: green; font-weight:bold; }
 s { color: red }
 h { color: aqua; font-weight: bold;}
 span.dasfoot { position:absolute; top: 670px; right: 1em; font-size: 50%; color: grey}
+img.e { width: 40px;}
