--- a/2015_10_OSDC_JavaScript/css/theme/projection.css
+++ b/2015_10_OSDC_JavaScript/css/theme/projection.css
@@ -140,7 +140,7 @@ body {
   display: block;
   padding: 5px;
   overflow: auto;
-  max-height: 400px;
+  /*max-height: 400px;*/
   word-wrap: normal;
   background: #3F3F3F;
   color: #DCDCDC; }
