--- a/2015_10_OSDC_JavaScript/css/theme/projection.css
+++ b/2015_10_OSDC_JavaScript/css/theme/projection.css
@@ -108,10 +108,11 @@ body {
 .reveal blockquote {
   display: block;
   position: relative;
-  width: 70%;
+  width: 90%;
   margin: 20px auto;
   padding: 5px;
   font-style: italic;
+  font-size: 150%;
   background: rgba(255, 255, 255, 0.05);
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2); }
 
