--- a/2015_10_OSDC_JavaScript/css/glasnt.css
+++ b/2015_10_OSDC_JavaScript/css/glasnt.css
@@ -1,4 +1,4 @@
-c { color: green; font-weight:bold; }
+c { color: lightgreen; font-weight:bold; }
 s { color: red }
 r { color: red }
 h { color: aqua; font-weight: bold;}
