--- a/2015_10_OSDC_Workshop/css/glasnt.css
+++ b/2015_10_OSDC_Workshop/css/glasnt.css
@@ -7,6 +7,10 @@ span.X { display:block; font-weight: bold; padding: 5px;color: orange }
 span.Y { display:block; font-weight: bold; padding: 5px;color: aqua }
 span.Z { display:block; font-weight: bold; padding: 5px;color: lightgreen }
 span.C { display:block; font-weight: bold; padding: 5px;color: red }
+span.C::before { content: "*" }
+span.Z::before { content: "*" }
+span.Y::before { content: "*" }
+span.X::before { content: "*" }
 
 span.dasfoot { position:absolute; top: 670px; right: 1em; font-size: 75% }
 span.dasfootc { position:absolute; top: 470px; right: 1em; font-size: 75% }
