--- a/HatRack/css/glasnt.css
+++ b/HatRack/css/glasnt.css
@@ -1,1 +1,1 @@
-span.dasfoot { position:absolute; top: 670px; right: 1em; font-size: 100%; }
+span.dasfoot { position:absolute; right: 1em; font-size: 100%; }
