--- a/HatRackExtra/css/glasnt.css
+++ b/HatRackExtra/css/glasnt.css
@@ -1,1 +1,1 @@
-span.dasfoot { position:absolute; right: 1em; font-size: 100%; }
+span.dasfoot { position:absolute; right: 1em; font-size: 100%; font-weight: bold;}
