--- a/2016_05_PHPTek_Hats/css/glasnt.css
+++ b/2016_05_PHPTek_Hats/css/glasnt.css
@@ -14,6 +14,7 @@ span.tweet > span.username {
     font-size: 80%; 
     display:block;
     margin-bottom: 40px;
+    color: #0084B4 !important;
 }
  
 span.tweet > span.content { 
