--- a/2016_07_WD_Code/css/glasnt.css
+++ b/2016_07_WD_Code/css/glasnt.css
@@ -2,6 +2,13 @@ div.big {
 	font-size: 120px;
 }
 
+.tinycode { 
+    font-size: 10px;
+    line-height:1;
+    white-space: pre;
+}   
+
+
 img.inline_emoji {
     height: 60px;
     margin: 15px 0px 0px;
