--- a/2016_08_KatieConf/css/glasnt.css
+++ b/2016_08_KatieConf/css/glasnt.css
@@ -10,3 +10,9 @@ h1 {
   font-weight: 300;
   src: url('Sofia-Regular.otf');
 } 
+@font-face {
+  font-family: 'Seaside';
+  font-style: normal;
+  font-weight: 300;
+  src: url('Seaside.ttf');
+}
