--- a/2016_07_WD_Code/css/glasnt.css
+++ b/2016_07_WD_Code/css/glasnt.css
@@ -1,3 +1,4 @@
+img.e { width: 40px} 
 div.big {
 	font-size: 120px;
 }
@@ -13,3 +14,8 @@ img.inline_emoji {
     height: 60px;
     margin: 15px 0px 0px;
 } 
+span.dasfoot { position:absolute; top: 670px; right: 1em; font-size: 50%; color: grey}
+c { color: green; font-weight:bold; }
+s { color: red }
+r { color: red }
+h { color: aqua; font-weight: bold;}
