--- a/2016_07_WD_Code/css/theme/projection_white.css
+++ b/2016_07_WD_Code/css/theme/projection_white.css
@@ -131,7 +131,7 @@ body {
   font-family: monospace;
   line-height: 1.2em;
   word-wrap: break-word;
-  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); }
+ }
 
 .reveal code {
   font-family: monospace; }
@@ -142,8 +142,9 @@ body {
   overflow: auto;
   max-height: 400px;
   word-wrap: normal;
-  background: #3F3F3F;
-  color: #DCDCDC; }
+  color: #000000;
+  background: #ffffff; 
+}
 
 .reveal table {
   margin: auto;
