no, you're commit code from the green room

--- a/2017_02_RubyConfAU/css/glasnt.css
+++ b/2017_02_RubyConfAU/css/glasnt.css
@@ -18,4 +18,4 @@ span.dasfoot { position:absolute; top: 670px; right: 1em; font-size: 50%; color:
 c { color: green; font-weight:bold; }
 s { color: red }
 r { color: red }
-h { color: aqua; font-weight: bold;}
+h { color: blue; font-weight: bold;}
