Remove alcohol from code reference

--- a/2017_08_DjangoConUS/css/glasnt.css
+++ b/2017_08_DjangoConUS/css/glasnt.css
@@ -21,3 +21,4 @@ s { color: red }
 r { color: red }
 h { color: blue; font-weight: bold;}
 img.in { height: 60px; margin: 0 !important}
+.ficate { font-size: 100% !important}
