--- a/2017_11_BSidesWLG/css/glasnt.css
+++ b/2017_11_BSidesWLG/css/glasnt.css
@@ -2,7 +2,8 @@ c { color: green; font-weight:bold; }
 s { color: red }
 r { color: red }
 h { color: blue; font-weight: bold;}
-span.bfoot {position:absolute; bottom: 0px; right: 1em; font-size: 50%; color: grey}
+span.bfoot {position:absolute; bottom: 0px; right: 1em; font-size: 50%; color: grey !important; }
+span.bfoot a { color: grey !important}
 span.dasfoot { position:absolute; top: 670px; right: 1em; font-size: 50%; color: grey}
 img.e { width: 40px;}
 .reveal a { color: black}
