--- a/2018_04_SyPy/css/glasnt.css
+++ b/2018_04_SyPy/css/glasnt.css
@@ -2,6 +2,8 @@ r { color: #d73a49 }
 l { color: #005cc5 }
 d { color: #032f62 }
 c { color: #6a737d; }
+o { color: #e36209}
+fl { font-family: "DTLProkyonST", regular}
 pre code { 
    font-family: "SFMono-Regular",Consolas,"Liberation Mono",Menlo,Courier,monospace !important;
    font-size: 30pt !important; 
