Even more progress!

--- a/2018_04_SyPy/css/glasnt.css
+++ b/2018_04_SyPy/css/glasnt.css
@@ -6,6 +6,7 @@ o { color: #e36209}
 ty { color: rgb(215,254,185) }
 tg { color: rgb(0,135,6) }
 w { color: rgb(98,98,98); background-color: rgb(188,188,188)}
+ww { padding: 4px 7px 4px 7px; color: rgb(98,98,98); background-color: rgb(188,188,188)}
 tb { color: rgb(0,135,215) }
 fl { font-family: "DTLProkyonST", regular}
 ps { color: rgb(212,212,173) }
