--- a/2018_04_SyPy/css/glasnt.css
+++ b/2018_04_SyPy/css/glasnt.css
@@ -3,6 +3,7 @@ l { color: #005cc5 }
 d { color: #032f62 }
 c { color: #6a737d; }
 o { color: #e36209}
+g { color: #6f42c1 }
 ty { color: rgb(215,254,185) }
 tg { color: rgb(0,135,6) }
 w { color: rgb(98,98,98); background-color: rgb(188,188,188)}
