Darn you Jeremy Burge

--- a/2018_06_PyConTW/css/glasnt.css
+++ b/2018_06_PyConTW/css/glasnt.css
@@ -4,6 +4,10 @@ div.big {
 	font-size: 120px;
 }
 
+a { 
+    color: black !important; 
+}
+
 .tinycode { 
     font-size: 10px;
     line-height:1;
